[project]
name = "rovmarket-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "DanilSJ",email = "danilchagarnoy@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "black (>=25.1.0,<26.0.0)",
    "elasticsearch (>=9.1.0,<10.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis[asyncio] (>=6.3.0,<7.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "shapely (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
